# codesmith-backend

./: Dockerfile  data.json  docker-compose.yml  pyproject.toml  testing.json
src/: __init__.py  app.py  config.py  database.py  models.models  prompts.txt
src/handlers/: __init__.py  fileshare.py  generator.py  templates.py
src/models/: General.py  __init__.py  templates.py
src/models/pydantic/: AiMl.py  Backend.py  CLI.py  DevOps.py  Frontend.py  FullStack.py  GameDev.py  General.py  Mobile.py  __init__.py
src/models/templates/: AiMl.py  Backend.py  CLI.py  DevOps.py  Frontend.py  FullStack.py  GameDev.py  General.py  Mobile.py  __init__.py
src/routers/: __init__.py  fileshare.py  templates.py
src/routers/generator/: __init__.py  specific.py
